--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:id="@+id/headlineTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BEST SELLERS"
+            android:text="@string/best_sellers"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:padding="20dp"
@@ -47,7 +47,7 @@
                     android:id="@+id/pizzaNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cheese Garden"
+                    android:text="@string/cheese_garden"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
                     app:fontFamily="@font/roboto_medium"/>
@@ -56,8 +56,8 @@
                     android:id="@+id/pizzaOrderedTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Ordered 91 times today"
-                    android:textColor="#d3c6c3c3"
+                    android:text="@string/ordered_91_times_today"
+                    android:textColor="@color/textColorUnselected"
                     android:textSize="12sp"
                     android:textAllCaps="true"
                     android:layout_marginTop="16dp"
@@ -68,7 +68,7 @@
                     style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Customise"
+                    android:text="@string/customise"
                     android:fontFamily="@font/roboto_medium"
                     android:paddingStart="30dp"
                     android:paddingEnd="30dp"
